# serominer

./: .bumpversion.cfg  .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  build.bat  build_10.bat  build_92.bat  build_cuda.bat  build_opencl.bat  circle.yml
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
ethminer/: CMakeLists.txt  main.cpp
libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libdevcore/: CommonData.cpp  CommonData.h  FixedHash.h  Guards.h  Log.cpp  Log.h  Worker.cpp  Worker.h
libethash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt  asc2cpp.cmake  ethash_miner_kernel.cl  ethash_miner_kernel.h  progpow_miner_kernel.cl  progpow_miner_kernel.h
libethash-cl/CL/: cl2.hpp
libethash-cpu/: CPUMiner.cpp  CPUMiner.h
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  cuda_helper.h  ethash_miner_kernel.cu  ethash_miner_kernel.h  progpow_miner_kernel.cu  progpow_miner_kernel.h
libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
libhwmon/: wrapadl.cpp  wrapamdsysfs.cpp  wrapamdsysfs.h  wrapnvml.cpp
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
libprogpow/: ProgPow.cpp  ProgPow.h
scripts/: testpools.bash
serominer/: CMakeLists.txt  ethminer.rc  main.cpp  test.cpp
(+5 files in other folders)
